# OpenMAVIS

./: .clang-format  .gitignore  CMakeLists.txt
Examples/Debugging/: CMakeLists.txt  app_transformation_editor.py  feature_extraction.cpp  plot_transformations.py  read_mcap.cpp
Examples/Multi-Inertial/: HiltiChallenge2022.yaml  Oxford.yaml  multi_inertial_euroc.cc  multi_stereolabs.yaml
Examples/Stereo-Inertial/: stereo_inertial_euroc.cc
include/: Atlas.h  Config.h  Converter.h  Frame.h  FrameDrawer.h  G2oTypes.h  GeometricTools.h  ImuTypes.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  MLPnPsolver.h  Map.h  MapDrawer.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  OptimizableTypes.h  Optimizer.h  SerializationUtils.h  Settings.h  Sim3Solver.h  System.h  Tracking.h  TwoViewReconstruction.h  Viewer.h
include/CameraModels/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
src/: Atlas.cc  Config.cc  Converter.cc  Frame.cc  FrameDrawer.cc  G2oTypes.cc  GeometricTools.cc  ImuTypes.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  MLPnPsolver.cpp  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  OptimizableTypes.cpp  Optimizer.cc  Settings.cc  Sim3Solver.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc  Viewer.cc
src/CameraModels/: KannalaBrandt8.cpp  Pinhole.cpp
